--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
  * Always set the map height explicitly to define the size of the div element
  * that contains the map. 
  */
-#map {
+ #map {
   height: 100%;
 }
 
@@ -21,3 +21,25 @@ body {
   padding: 0;
 }
 
+.callButton {
+    display: inline-block;
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.callButton:hover {
+    background-color: #2576b5;
+}
+
+#emergencyCall {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
